--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,9 @@
 .nav {
 	float: right;
 	margin-right: 175px;
-	font-size: 25px;
-	color: white;
+	font-size: 20px;
+	color: grey;
 	display: inline-block;
-	background-color: #4aaaa5;
 	height: 80px;
 }
 
@@ -38,6 +37,11 @@
 .portfolio {
 	border-left: 1px solid grey;
 	border-right: 1px solid grey;
+	width: 40px;
+	margin-right: 20px;
+	margin-left: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 .derp {
@@ -100,6 +104,17 @@
 	color: #4aaaa5;
 	border-bottom: 2px solid grey;
 	margin-bottom: 25px;
+}
+
+.about-me-content {
+	color: grey;
+	font-size: 22px;
+}
+
+.portfoliopic {
+	float: left;
+	padding-right: 15px;
+	padding-bottom: 8px;
 }
 
 .connect {
