--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,18 @@
 	border-bottom: 1px solid grey;
 }
 
+h1 , h2 {
+	font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+p {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+a {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
 body {
 	margin: 0;
 }
