--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 	height: 80px;
 	width: 100%;
 	position: relative;
-	border-bottom: 2px solid grey;
+	border-bottom: 2px solid #cccccc;
 }
 
 .jdm {
@@ -82,7 +82,7 @@
 	top: 0;
 	right: 0;
 	padding: 20px;
-	border: 1px solid grey;
+	border: 1px solid #cccccc;
 	
 }
 
@@ -97,18 +97,19 @@
 	width: 650px;
 	background-color: white;
 	padding: 20px;
-	border: 1px solid grey;
+	border: 1px solid #cccccc;
 }
 
 .about-me {
 	color: #4aaaa5;
-	border-bottom: 2px solid grey;
+	border-bottom: 2px solid #cccccc;
 	margin-bottom: 25px;
 }
 
 .about-me-content {
 	color: grey;
-	font-size: 22px;
+	font-size: 20px;
+	line-height: 30px;
 }
 
 .portfoliopic {
@@ -120,7 +121,7 @@
 .connect {
 	text-align: center;
 	color: #4aaaa5;
-	border-bottom: 1px solid grey;
+	border-bottom: 1px solid #cccccc;
 }
 
 h1 , h2 {
@@ -133,6 +134,8 @@ p {
 
 a {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	text-decoration: none;
+	color: grey;
 }
 
 body {
