Moved files around for clarity

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,7 +250,7 @@ label {
 }
 
 body {
-	background-image: url(ep_naturalwhite.png);
+	background-image: url(../images/ep_naturalwhite.png);
 }
 
 body, html {
